--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
-spring.datasource.url=jdbc:h2:mem:invitationDB
+spring.datasource.url=jdbc:h2:mem:RentMeDB
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.datasource.username=sa
